@startuml

title __SQL's Class Diagram__\n

  package game {
    package game.helper.sql {
      class ArtifactPositionWrapper {
          - createArtifactsPosition()
          + insert()
          + delete()
          + getAllArtifactsGameboardsMap()
          + getAllArtifactsPositions()
          + createTable()
      }
    }
  }
  

  package game {
    package game.helper.sql {
      class ArtifactWrapper {
          - createTableArtifacts()
          + delete()
          + insert()
          + getAllArtifacts()
          + createTable()
      }
    }
  }
  

  package game {
    package game.helper.sql {
      class ConnectedGameBoardsWrapper {
          - createTableRelated()
          + createTable()
          + delete()
          + insertRelatedBoards()
          + getAllRelatedGameBoards()
      }
    }
  }
  

  package game {
    package game.helper.sql {
      class GameBoardWrapper {
          - createTableGameBoards()
          + delete()
          + insert()
          + createTable()
          + getAllGameBoards()
      }
    }
  }
  

  package game {
    package game.helper.sql {
      class PlayerWrapper {
          + delete()
          + insert()
          - createTablePlayers()
          + getAllPlayers()
          + createTable()
      }
    }
  }
  

  package game {
    package game.helper.sql {
      abstract class SqliteWrapper {
          # connect()
          # createTable()
          {abstract} + createTable()
          + insert()
      }
    }
  }
  

  ArtifactPositionWrapper -up-|> SqliteWrapper
  ArtifactWrapper -up-|> SqliteWrapper
  ConnectedGameBoardsWrapper -up-|> SqliteWrapper
  GameBoardWrapper -up-|> SqliteWrapper
  PlayerWrapper -up-|> SqliteWrapper


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
